Scrollbar width fix

--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -1,6 +1,11 @@
+body::-webkit-scrollbar {
+    width: 0;
+}
+.reveal-overlay {
+  
+}
 .wrapper {
   height: 100%;
-
   .header {
     background: rgba(255,255,255,0.9);
     left: 50%  !important;
